# mlsys-contest-syfi-fully-agent

./: .gitignore  README.md
dsa_indexer/: config.toml  solution.json
dsa_indexer/solution/cuda/: dsa_topk_indexer.cu  dsa_topk_indexer.cu.prev
dsa_indexer/solution/triton/: dsa_topk_indexer.py
dsa_sparse_attention/: config.toml  solution.json
dsa_sparse_attention/scripts/: pack_solution.py  run_local.py
dsa_sparse_attention/solution/cuda/: dsa_sparse_attention.cu
full-agent-pipeline/: .gitignore  .mcp.json  README.md  modal_bench.py  pyproject.toml  run_pipeline.py
full-agent-pipeline/mcps/ncu-mcp/: CLAUDE.md  pyproject.toml
full-agent-pipeline/mcps/ncu-mcp/src/ncu_mcp/: __init__.py  __main__.py  formatters.py  ncu_runner.py  parsers.py  server.py  test_client.py
full-agent-pipeline/references/: README.md  dsa_sparse_attention.py  dsa_topk_indexer.py  gdn_decode.py  gdn_prefill.py  moe.py
full-agent-pipeline/scripts/: manual_eval.py  seed_ref_cache.py
gdn_decode/: config.toml  solution.json
gdn_decode/solution/cuda/: gdn_decode.cu
gdn_prefill/: config.toml  solution.json
gdn_prefill/solution/cuda/: gdn_prefill.cu
moe/: config.toml  solution.json
moe/solution/cuda/: moe.cu
